# tasca-3-recovery

./: LICENSE  README.md  pyproject.toml
models/: dt_pulsar_model.pck  knn_pulsar_model.pck  lr_pulsar_model.pck  svm_pulsar_model.pck
notebooks/: classification_models.ipynb  client.ipynb
tasca_3_recovery/: server.py
